# CW_3

./: ReadME.MD  operations_on_account.py  pyproject.toml  settings.py
tests/: operation_on_account_test.py  read_json_test.py  transaction_test.py  transactions_test.py
utils/: classes.py  functions.py  settings.py
