[tool.poetry]
name = "cw-3"
version = "0.1.0"
description = ""
authors = ["Artemii Dovzhenko <rockenny@ymail.com>"]
readme = "README.md"
packages = [{include = "cw_3"}]

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
coverage = "^7.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
